# DriverDNA

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE_VISION.md  COACHING.md  PROJECT-BRIEF.md  REFERENCE-LAPS.md  SPEC.md  STATUS.md  UI-SPEC.md  attribution-report.md  coaching-report.md  corners-report.md  driver-model-report.md  garage61-api.md  incidents-report.md  metrics-report.md  schema-report.md  ui-redesign-mockup.html
src/driverdna/: __init__.py  __main__.py  cli.py  config.py  db.py  pipeline.py  signals.py
src/driverdna/attribution/: __init__.py  engine.py  ranker.py  report.py
src/driverdna/chat/: __init__.py  session.py  tools.py
tests/: synth.py  test_api.py  test_attribution.py  test_chat.py  test_chat_api.py  test_classify.py  test_coach.py  test_coaching_engine.py  test_coaching_ontology.py  test_coaching_report.py  test_corners_report.py  test_dated_import.py  test_db.py  test_demo.py  test_garage61_client.py  test_garage61_sync.py  test_identity.py  test_import_cli.py  test_incidents.py  test_metrics.py  test_model_db.py  test_model_report.py  test_offline.py  test_parser.py  test_rebuild_map.py  test_render_parity.py  test_report.py  test_schema_lock.py  test_scoring.py  test_segmenter.py  test_smoke.py  test_sync_cli.py  test_taxonomy.py  test_ui_static.py  test_upload_api.py  test_upload_ui.py
tests/fixtures/: Garage_61_59384F.csv  Garage_61_5HAH7B.csv  Garage_61_5ZBWTZ.csv  Garage_61_B3M5ZW.csv  Garage_61_HKWPXX.csv  Garage_61_K56YRV.csv  Garage_61_RH11X7.csv  Garage_61_VHC6M4.csv  Garage_61_W5JRZB.csv  Garage_61_WC6PRT.csv  Garage_61_WN30FK.csv  Garage_61_ZE3WQQ.csv  README.md  manifest.toml
ui/: index.html  package-lock.json  package.json  tokens.json  vite.config.js
ui/src/: api.js  app.css  app.jsx  format.js  main.jsx
(+80 files in other folders)
