[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "driverdna"
version = "0.1.0.dev0"
description = "Personal racing-telemetry instrument: deterministic technique analysis over Garage61 exports, with grounded AI coaching"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.5",
    "typer>=0.9",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
driverdna = "driverdna.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
